--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,20 @@
-$body-bg:                    #34495e;
-$navbar-default-bg:          #2c3e50;
-$navbar-default-link-color:  #ecf0f1;
-$brand-primary:              #1abc9c;
-$jumbotron-bg:               #ecf0f1;
+@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400);
+
+$body-bg:                     #ecf0f1;
+$font-family-sans-serif:      'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-default-bg:           #bdc3c7;
+$navbar-heigth:               45px;
+$navbar-default-link-color:   #e74c3c;
+$navbar-default-brand-color:  #c0392b;
+$brand-primary:               #27ae60;
+$jumbotron-bg:                #bdc3c7;
 
 @import 'bootstrap';
+
+.center{
+  text-align: center;
+}
+
+.navbar-brand{
+  font-weigth: bold;
+}
