--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>Description</th>
+      <th>User E-Mail</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,9 +13,12 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
+        <td><%= pin.user.email if pin.user %></td>
         <td><%= link_to 'Show', pin, class: "btn btn-primary btn-sm" %></td>
-        <td><%= link_to 'Edit', edit_pin_path(pin), class: "btn btn-primary btn-sm" %></td>
-        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-sm" %></td>
+        <% if pin.user == current_user %>
+        	<td><%= link_to 'Edit', edit_pin_path(pin), class: "btn btn-primary btn-sm" %></td>
+        	<td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-sm" %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +26,6 @@
 
 <br>
 
+<% if user_signed_in? %>
 <%= link_to 'New Pin', new_pin_path %>
+<% end %>
