--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div class="jumbotron center">
 <h1>Welcome to my app!</h1>
 
 <% if user_signed_in? %>
@@ -8,3 +9,4 @@
 		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 	</p>
 <% end %>
+</div>
