--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,33 +1,16 @@
-<h1>Listing pins</h1>
-
-<table>
-  <thead>
-    <tr>
-    	<th>Image</th>
-      <th>Description</th>
-      <th>User E-Mail</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pins.each do |pin| %>
-      <tr>
-      	<td><%= image_tag pin.image.url(:medium) %></td>
-        <td><%= pin.description %></td>
-        <td><%= pin.user.email if pin.user %></td>
-        <td><%= link_to 'Show', pin, class: "btn btn-primary btn-sm" %></td>
-        <% if pin.user == current_user %>
-        	<td><%= link_to 'Edit', edit_pin_path(pin), class: "btn btn-primary btn-sm" %></td>
-        	<td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-sm" %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<% if user_signed_in? %>
-<%= link_to 'New Pin', new_pin_path %>
-<% end %>
+<div id="pins" class="transitions-enabled">
+	<% @pins.each do |pin| %>
+	<div class="box panel panel-default">
+		<%= image_tag pin.image.url(:medium) %>
+		<div class="panel-body">
+		<%= pin.description %>
+		<%= pin.user.email if pin.user %>
+		<%= link_to 'Show', pin, class: "btn btn-primary btn-sm" %>
+		<% if pin.user == current_user %>
+		<%= link_to 'Edit', edit_pin_path(pin), class: "btn btn-primary btn-sm" %>
+		<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-sm" %>
+		<% end %>
+		</div>
+	</div>
+	<% end %>
+</div>
