--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -9,6 +9,7 @@ $navbar-default-brand-color:  #c0392b;
 $brand-primary:               #27ae60;
 $jumbotron-bg:                #bdc3c7;
 
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
 
 .center{
