--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,13 +1,13 @@
 <%= render 'pages/home' unless user_signed_in? %>
 
-<div id="pins" class="transitions-enabled">
+<div id="pins" class="transitions-enabled center">
 	<% @pins.each do |pin| %>
-	<div class="box panel panel-default">
+	<div class="box panel panel-default center">
 		<%= link_to image_tag(pin.image.url(:medium)), pin %>
 		<div class="panel-body">
 			<%= pin.description %>
 			<br/>
-			<strong><%= pin.user.email if pin.user %></strong>
+			<strong><%= pin.user.name if pin.user %></strong>
 			<% if pin.user == current_user %>
 			<div class="actions">
 				<%= link_to edit_pin_path(pin) do %>
@@ -23,4 +23,8 @@
 		</div>
 	</div>
 	<% end %>
+</div>
+
+<div class="center">
+<%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
 </div>
