--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -10,7 +10,7 @@
 						<%= @pin.description %>
 					</p>
 					<p>
-						<%= @pin.user.email if @pin.user %>
+						<%= @pin.user.name if @pin.user %>
 					</p>
 					<% if @pin.user == current_user %>
 					<%= link_to edit_pin_path(@pin) do %>
